socket work for list

--- a/views/party.jade
+++ b/views/party.jade
@@ -4,7 +4,11 @@ block styleSheets
 	link(rel='stylesheet', href='/stylesheets/sliders.css')
 
 block pageScripts
+	script(src="/js/jquery_2.1.0.js")
+	script(src="/js/socket.io.js")
+	script(src="/js/spotify.js")
 	script(src='/js/sliders.js')
+	script(src="/js/party.js")
 
 block content
 	div.sliderPane#musicPane
