--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -155,3 +155,58 @@ a {
   color: #383b42;
   text-decoration: none;
 }
+.flat-button {
+  margin-top: 10px;
+  margin-right: 10px;
+  padding: 14px 26px;
+  font-size: 14px;
+  line-height: 100%;
+  text-shadow: 0 1px rgba(0,0,0,0.4);
+  color: #fff;
+  display: inline-block;
+  vertical-align: middle;
+  text-align: center;
+  cursor: pointer;
+  font-weight: bold;
+  -webkit-transition: background 0.1s ease-in-out;
+  -moz-transition: background 0.1s ease-in-out;
+  -o-transition: background 0.1s ease-in-out;
+  -ms-transition: background 0.1s ease-in-out;
+  transition: background 0.1s ease-in-out;
+  -webkit-transition: background 0.1s ease-in-out;
+  -moz-transition: background 0.1s ease-in-out;
+  -ms-transition: background 0.1s ease-in-out;
+  -o-transition: background 0.1s ease-in-out;
+  text-shadow: 0 1px rgba(0,0,0,0.3);
+  color: #fff;
+  border: none;
+  -webkit-border-radius: 3px;
+  -moz-border-radius: 3px;
+  -webkit-border-radius: 3px;
+  border-radius: 3px;
+  font-family: 'Helvetica Neue', Helvetica, sans-serif;
+  height: 70px;
+}
+.flat-button:active {
+  padding-top: 15px;
+  margin-bottom: -1px;
+}
+.flat-button,
+.flat-button:hover,
+.flat-button:active {
+  outline: 0 none;
+  text-decoration: none;
+  color: #fff;
+}
+.flat-button-1 {
+  background-color: #ef634c;
+  -webkit-box-shadow: 0px 3px 0px 0px #ce503a;
+  box-shadow: 0px 3px 0px 0px #ce503a;
+}
+.flat-button-1:hover {
+  background-color: #eb5137;
+}
+.flat-button-1:active {
+  -webkit-box-shadow: 0px 1px 0px 0px #ce503a;
+  box-shadow: 0px 1px 0px 0px #ce503a;
+}
