--- a/views/hub.jade
+++ b/views/hub.jade
@@ -1,9 +1,11 @@
 extends layout
 
 block pageScripts
-  script(src="/js/jquery_2.1.0.js")
   script(src="/js/socket.io.js")
   script(src="/js/spotify.js")
+  script(src="/js/handlebars.js")
+  script(src="/js/typeahead.bundle.js")
+  script(src="/js/soundcloud.js")
   script(src="/js/hub.js")
 
 block content
