--- a/views/layout.jade
+++ b/views/layout.jade
@@ -1,21 +1,22 @@
 doctype html
 html
-	head
-		title= title
-		link(rel='stylesheet', href='/stylesheets/main.css')
-		link(rel='stylesheet', href='/stylesheets/style.css')
-		block styleSheets
-		
-		script(src='/js/jquery_2.1.0.js')
-		script(src='/js/jquery_ui_1.10.4.min.js')
-		block pageScripts
-	body
-		div.navbar
-			a#brand(href="/")
-				p#brand-party Party
-				p Hub
-			div.nav-user
-				a(href="/login") login
-				div.divider
-				a(href="/signup") signup
-		block content
+  head
+    title= title
+    link(rel='stylesheet', href='/stylesheets/main.css')
+    link(rel='stylesheet', href='/stylesheets/style.css')
+    block styleSheets
+
+    script(src='/js/jquery_2.1.0.js')
+    script(src='/js/jquery_ui_1.10.4.min.js')
+    script(src="/js/constants.js")
+    block pageScripts
+  body
+    div.navbar
+      a#brand(href="/")
+        p#brand-party Party
+        p Hub
+      div.nav-user
+        a(href="/login") login
+        div.divider
+        a(href="/signup") signup
+    block content
