--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -28,6 +28,7 @@ body
     font-family 'Oswald'
     background-color light-back-color
     color dark-back-color
+    text-align center
 
 .navbar
     padding 0px 15%
@@ -35,6 +36,8 @@ body
     background-color mid-back-color
     height 50px
     overflow visible
+    color main-white
+    // border-bottom:3px solid dark-back-color;
 
 #brand
     float left
@@ -58,8 +61,8 @@ body
 .divider
     background-color dark-back-color
     width 3px
-    top 5px
-    height 40px
+    top 10px
+    height 30px
     display inline
     margin 0px
     position absolute
@@ -73,7 +76,7 @@ body
     margin 20px
 
 a
-    color dark-back-color
+    color main-white
     text-decoration none
 
 .flat-button
