--- a/views/layout.jade
+++ b/views/layout.jade
@@ -18,5 +18,5 @@ html
       div.nav-user
         a(href="/login") login
         div.divider
-        a(href="/signup") signup
+        a#signup(href="/signup") signup
     block content
