--- a/public/stylesheets/sliders.css
+++ b/public/stylesheets/sliders.css
@@ -24,10 +24,12 @@
 
 #musicSlider {
     left: 0;
-    background: #de6143 url('/resources/images/note.svg') no-repeat center;
+    background: url('/resources/images/note.svg') no-repeat center;
     background-size: 50%;
     border-radius: 0 0 0.5em 0;
     /*box-shadow: 0.2em 0.2em 0.75em;*/
+    background-color: #de6143;
+    box-shadow: 0px 3px 0px 0px #bd4021;
 }
 
 #musicSlider:hover {
