--- a/views/party.jade
+++ b/views/party.jade
@@ -2,6 +2,7 @@ extends layout
 
 block styleSheets
 	link(rel='stylesheet', href='/stylesheets/sliders.css')
+	link(rel='stylesheet', href='/stylesheets/song.css')
 
 block pageScripts
 	script(src='/js/sliders.js')
@@ -15,4 +16,16 @@ block content
 	div.sliderToggle#pictureSlider
 	div.sliderToggle#musicSlider
 
-	div.trackEntity#mainPlayer
+	div#mainPlayer
+		img.playerAlbum(src="/resources/images/chance.jpg")
+
+	div#queueContainer
+		div.songContainer
+			div.queueNumber 1
+			img.queueAlbum(src="/resources/images/chance.jpg")
+			p.upVotes 10
+			img.thumbUp(src="/resources/images/thumbUp.svg")
+			p.songTitle Disclosure - Latch
+			p.downVotes 0
+			img.thumbDown(src="/resources/images/thumbDown.svg")
+		
