--- a/views/layout.jade
+++ b/views/layout.jade
@@ -4,7 +4,8 @@ html
     title= title
     link(rel='stylesheet', href='/stylesheets/main.css')
     link(rel='stylesheet', href='/stylesheets/style.css')
-    block styleSheets
+    link(rel='stylesheet', href='/stylesheets/sliders.css')
+    link(rel='stylesheet', href='/stylesheets/song.css')
 
     script(src='/js/jquery_2.1.0.js')
     script(src='/js/jquery_ui_1.10.4.min.js')
@@ -20,3 +21,6 @@ html
         div.divider
         a#signup(href="/signup") signup
     block content
+    div.bottom
+      a(href="http://soundcloud.com")
+        img(src="/resources/images/powered_by_white.png")
