--- a/public/stylesheets/song.styl
+++ b/public/stylesheets/song.styl
@@ -92,6 +92,13 @@ player-height = 150px
     display inline
     float right
 
+.deleteButton
+    height song-height * (0.8)
+    margin song-height * (0.1)
+    margin-left 20px
+    display inline
+    float right
+
 .downVotes
     display inline
     float right
