--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -37,6 +37,7 @@ body
     height 50px
     overflow visible
     color main-white
+    margin-bottom 20px
     // border-bottom:3px solid dark-back-color;
 
 #brand
@@ -124,3 +125,8 @@ a
 
 .flat-button-1:active
     box-shadow: 0px 1px 0px 0px #ce503a;
+
+.adminBtn
+    height 70px
+    margin 10px
+    margin-top 30px
