--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -116,6 +116,7 @@ body {
   height: 50px;
   overflow: visible;
   color: #e5e8ef;
+  margin-bottom: 20px;
 }
 #brand {
   float: left;
@@ -211,4 +212,9 @@ a {
 .flat-button-1:active {
   -webkit-box-shadow: 0px 1px 0px 0px #ce503a;
   box-shadow: 0px 1px 0px 0px #ce503a;
+}
+.adminBtn {
+  height: 70px;
+  margin: 10px;
+  margin-top: 30px;
 }
