--- a/views/hub.jade
+++ b/views/hub.jade
@@ -1,5 +1,9 @@
 extends layout
 
+block styleSheets
+  link(rel='stylesheet', href='/stylesheets/sliders.css')
+  link(rel='stylesheet', href='/stylesheets/song.css')
+
 block pageScripts
 	script(src="/js/socket.io.js")
 	script(src="/js/spotify.js")
@@ -28,13 +32,23 @@ block content
 	h1= title
 	p Party On, Party People.
 
-	div#mainPlayer
-		img.playerAlbum(src="/resources/images/chance.jpg")
+  img.adminBtn#playButton(src="/resources/images/playButton.svg")
+  img.adminBtn#skipButton(src="/resources/images/skipButton.svg")
 
-	div#queueContainer
+  div#mainPlayer
+    img.playerAlbum(src="/resources/images/chance.jpg")
 
-	input.newSong(style="width: 100%;" type="text")
-	div.songContainer
-		div.queueNumber ?
-		img.queueAlbum(src="/resources/images/missing.png")
-		p.songTitle
+  div#queueContainer
+    div.songContainer
+      div.queueNumber 1
+      img.queueAlbum(src="/resources/images/chance.jpg")
+      p.upVotes 10
+      img.thumbUp(src="/resources/images/thumbUp.svg")
+      p.songTitle Disclosure - Latch
+      img.deleteButton(src="/resources/images/deleteButton.svg")
+      p.downVotes 0
+      img.thumbDown(src="/resources/images/thumbDown.svg")
+
+  ul.playlist
+  input.newSong(type="text")
+  button.submit(type= "submit")
