--- a/views/hub.jade
+++ b/views/hub.jade
@@ -5,32 +5,32 @@ block styleSheets
   link(rel='stylesheet', href='/stylesheets/song.css')
 
 block pageScripts
-	script(src="/js/socket.io.js")
-	script(src="/js/spotify.js")
-	script(src="/js/handlebars.js")
-	script(src="/js/typeahead.bundle.js")
-	script(src="/js/soundcloud.js")
-	script(src="/js/hub.js")
-	script.suggestionTemplate(type="text/x-handlebars")
-		div.songContainer
-		  div.queueNumber
-			button.addSong(data-track-id="{{trackId}}") +
-		  img.queueAlbum(src="{{albumArtworkUrl}}")
-		  p.songTitle {{title}} - {{artist}}
-	script.songTemplate(type="text/x-handlebars")
-		div.songContainer
-		  div.queueNumber {{queueNumber}}
-		  img.queueAlbum(src="{{albumArtworkUrl}}")
-		  p.upVotes {{upvoteCount}}
-		  img.thumbUp(src="/resources/images/thumbUp.svg")
-		  p.songTitle {{title}} - {{artist}}
-		  p.downVotes {{downvoteCount}}
-		  img.thumbDown(src="/resources/images/thumbDown.svg")
+  script(src="/js/socket.io.js")
+  script(src="/js/spotify.js")
+  script(src="/js/handlebars.js")
+  script(src="/js/typeahead.bundle.js")
+  script(src="/js/soundcloud.js")
+  script(src="/js/hub.js")
+  script.suggestionTemplate(type="text/x-handlebars")
+    div.songContainer
+      div.queueNumber
+        button.addSong(data-track-id="{{trackId}}") +
+      img.queueAlbum(src="{{albumArtworkUrl}}")
+      p.songTitle {{title}} - {{artist}}
+  script.songTemplate(type="text/x-handlebars")
+    div.songContainer
+      div.queueNumber {{queueNumber}}
+      img.queueAlbum(src="{{albumArtworkUrl}}")
+      p.upVotes {{upvoteCount}}
+      img.thumbUp(src="/resources/images/thumbUp.svg")
+      p.songTitle {{title}} - {{artist}}
+      p.downVotes {{downvoteCount}}
+      img.thumbDown(src="/resources/images/thumbDown.svg")
 
 
 block content
-	h1= title
-	p Party On, Party People.
+  h1= title
+  p Party On, Party People.
 
   img.adminBtn#playButton(src="/resources/images/playButton.svg")
   img.adminBtn#skipButton(src="/resources/images/skipButton.svg")
@@ -49,6 +49,5 @@ block content
       p.downVotes 0
       img.thumbDown(src="/resources/images/thumbDown.svg")
 
-  ul.playlist
-  input.newSong(type="text")
-  button.submit(type= "submit")
+  div#requestContainer
+    input.newSong(style="width: 100%;" type="text")
