--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -104,7 +104,6 @@ a
     -webkit-border-radius: 3px;
     -moz-border-radius: 3px;
     border-radius: 3px;
-    font-family: 'Helvetica Neue', Helvetica, sans-serif;
     height: 70px;
 
 .flat-button:active
@@ -130,3 +129,10 @@ a
     height 70px
     margin 10px
     margin-top 30px
+
+.bottom
+    bottom 0px
+    position absolute
+    width 100%
+    padding-bottom 15px
+    padding-top 15px
