--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -187,7 +187,6 @@ a {
   -moz-border-radius: 3px;
   -webkit-border-radius: 3px;
   border-radius: 3px;
-  font-family: 'Helvetica Neue', Helvetica, sans-serif;
   height: 70px;
 }
 .flat-button:active {
@@ -217,4 +216,11 @@ a {
   height: 70px;
   margin: 10px;
   margin-top: 30px;
+}
+.bottom {
+  bottom: 0px;
+  position: absolute;
+  width: 100%;
+  padding-bottom: 15px;
+  padding-top: 15px;
 }
