--- a/views/hub.jade
+++ b/views/hub.jade
@@ -19,8 +19,7 @@ block pageScripts
       img.queueAlbum(src="{{albumArtworkUrl}}")
       p.songTitle {{title}} - {{artist}}
   script.songTemplate(type="text/x-handlebars")
-    div.songContainer
-      div.queueNumber {{queueNumber}}
+    li.songContainer
       img.queueAlbum(src="{{albumArtworkUrl}}")
       p.upVotes {{upvoteCount}}
       img.thumbUp(src="/resources/images/thumbUp.svg")
@@ -47,7 +46,7 @@ block content
           div#remaining
         td#endTime
 
-  div#queueContainer
+  ol#queueContainer
 
   div#requestContainer
     input.newSong(style="width: 100%;" type="text")
