--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -162,7 +162,7 @@ a {
   margin-top: 10px;
   margin-right: 10px;
   padding: 14px 26px;
-  font-size: 14px;
+  font-size: 26px;
   line-height: 100%;
   text-shadow: 0 1px rgba(0,0,0,0.4);
   color: #fff;
@@ -170,7 +170,6 @@ a {
   vertical-align: middle;
   text-align: center;
   cursor: pointer;
-  font-weight: bold;
   -webkit-transition: background 0.1s ease-in-out;
   -moz-transition: background 0.1s ease-in-out;
   -o-transition: background 0.1s ease-in-out;
@@ -180,14 +179,12 @@ a {
   -moz-transition: background 0.1s ease-in-out;
   -ms-transition: background 0.1s ease-in-out;
   -o-transition: background 0.1s ease-in-out;
-  text-shadow: 0 1px rgba(0,0,0,0.3);
   color: #fff;
   border: none;
   -webkit-border-radius: 3px;
   -moz-border-radius: 3px;
   -webkit-border-radius: 3px;
   border-radius: 3px;
-  height: 70px;
 }
 .flat-button:active {
   padding-top: 15px;
@@ -201,6 +198,10 @@ a {
   color: #fff;
 }
 .flat-button-1 {
+  height: 70px;
+  width: 15%;
+  margin: 10px;
+  min-width: 125px;
   background-color: #ef634c;
   -webkit-box-shadow: 0px 3px 0px 0px #ce503a;
   box-shadow: 0px 3px 0px 0px #ce503a;
@@ -216,6 +217,19 @@ a {
   height: 70px;
   margin: 10px;
   margin-top: 30px;
+}
+.landingBrand {
+  font-size: 78px;
+  color: #e5e8ef;
+  margin: 40px;
+  margin-top: 10%;
+}
+.landingBrand p {
+  display: inline;
+}
+#landingParty {
+  color: #5a5e6a;
+  display: inline;
 }
 .bottom {
   bottom: 0px;
