--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -84,7 +84,7 @@ a
     margin-top: 10px;
     margin-right: 10px;
     padding: 14px 26px;
-    font-size: 14px;
+    font-size: 26px;
     line-height: 100%;
     text-shadow: 0 1px rgba(0, 0, 0, 0.4);
     color: #fff;
@@ -92,19 +92,17 @@ a
     vertical-align: middle;
     text-align: center;
     cursor: pointer;
-    font-weight: bold;
     transition: background 0.1s ease-in-out;
     -webkit-transition: background 0.1s ease-in-out;
     -moz-transition: background 0.1s ease-in-out;
     -ms-transition: background 0.1s ease-in-out;
     -o-transition: background 0.1s ease-in-out;
-    text-shadow: 0 1px rgba(0, 0, 0, 0.3);
     color: #fff;
     border: none;
     -webkit-border-radius: 3px;
     -moz-border-radius: 3px;
     border-radius: 3px;
-    height: 70px;
+
 
 .flat-button:active
     padding-top: 15px;
@@ -116,6 +114,10 @@ a
     color: #fff;
 
 .flat-button-1
+    height: 70px;
+    width: 15%;
+    margin 10px
+    min-width: 125px;
     background-color: #ef634c;
     box-shadow: 0px 3px 0px 0px #ce503a;
 
@@ -129,6 +131,19 @@ a
     height 70px
     margin 10px
     margin-top 30px
+
+.landingBrand
+    font-size 78px
+    color main-white
+    margin 40px
+    margin-top 10%
+
+.landingBrand p
+    display inline
+
+#landingParty
+    color mid-back-color
+    display inline
 
 .bottom
     bottom 0px
