--- a/views/landing.jade
+++ b/views/landing.jade
@@ -9,6 +9,6 @@ block content
 			p Hub
 
 	a(href="/joinParty")
-		button#joinBtn.flat-button.flat-button-1(type="button", onclick="") Join
+		button#joinBtn.flat-button.flat-button-1(type="button", onclick="") Join a Party
 	a(href="/makeParty")
-		button#startBtn.flat-button.flat-button-1(type="button", onclick="") Start
+		button#startBtn.flat-button.flat-button-1(type="button", onclick="") Start a Party
