--- a/views/joinParty.jade
+++ b/views/joinParty.jade
@@ -8,4 +8,14 @@ block pageScripts
 
 
 block content
-  div
+  div#holder
+    h1
+    div#foundParty
+      ul
+        li Kevin's Rager
+        li 2200 Marilyn Street
+    div
+      h2
+      form
+        input(type='text')
+        input(type='submit')
