--- a/public/stylesheets/song.styl
+++ b/public/stylesheets/song.styl
@@ -104,3 +104,7 @@ player-height = 150px
     float right
     font-size (song-height * 0.5)
     margin (song-height*0.25) (song-height/3) (song-height*0.25) (song-height/6)
+
+input
+    position absolute
+    width 800px
