--- a/views/makeParty.jade
+++ b/views/makeParty.jade
@@ -24,13 +24,13 @@ block content
 					input.infoForm#zipCode(type="text")
 				div.infoBlock
 					label.infoLabel Date:
-					input.infoForm#date(type="text")
+					input.infoForm#date(type="date")
 				div.infoBlock
 					label.infoLabel Start Time:
-					input.infoForm#startTime(type="text")
+					input.infoForm#startTime(type="time")
 				div.infoBlock
 					label.infoLabel End Time:
-					input.infoForm#endTime(type="text")
+					input.infoForm#endTime(type="time")
 				button#submitBtn1.flat-button.flat-button-1(type="button", onclick="") Submit
 
 		div
