--- a/views/hub.jade
+++ b/views/hub.jade
@@ -49,4 +49,4 @@ block content
   ol#queueContainer
 
   div#requestContainer
-    input.newSong(style="width: 100%;" type="text")
+    input.newSong(type="text")
