--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -3,6 +3,50 @@ html, body {
     height: 100%;
 }
 
+/* POPUP PANE */
+#popupCover, #popup {
+    position: absolute;
+	z-index: 1000;
+	display: none;
+}
+
+#login, #signup {
+	cursor: pointer;
+	padding: 0.3em;
+}
+
+#signup {
+	padding: 0.4em;
+}
+
+#popupCover {
+    opacity: 0.6;
+    background-color: black;
+    width: 100%;
+    height: 100%;
+}
+
+
+#popup {
+    width: 60%;
+    height: 60%;
+    margin: 10% 20%;
+	background-color: white;
+	border-radius: 1em;
+	z-index: 1001;
+	font-size: 1.5em;
+	padding: 2em;
+}
+
+#popup div {
+	margin-top: 2em;
+}
+
+#popup h1 {
+	font-size: 2em;
+	margin: 0.5em 0;
+}
+
 /*! normalize.css v3.0.0 | MIT License | git.io/normalize */
 
 /**
