Fixed some basic stuff

--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -151,3 +151,17 @@ a
     width 100%
     padding-bottom 15px
     padding-top 15px
+
+.italic
+    font-style italic
+    display inline
+    color main-white
+    margin 5px
+
+.landingTagline
+    margin-top 10%
+
+.landingTagline > p
+    display inline
+    font-size 48px
+
