--- a/views/party.jade
+++ b/views/party.jade
@@ -3,6 +3,7 @@ extends layout
 block styleSheets
   link(rel='stylesheet', href='/stylesheets/sliders.css')
   link(rel='stylesheet', href='/stylesheets/musicPlayingTimeGrid.css')
+  link(rel='stylesheet', href='/stylesheets/song.css')
 
 block pageScripts
   script(src="/js/socket.io.js")
