--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -238,3 +238,16 @@ a {
   padding-bottom: 15px;
   padding-top: 15px;
 }
+.italic {
+  font-style: italic;
+  display: inline;
+  color: #e5e8ef;
+  margin: 5px;
+}
+.landingTagline {
+  margin-top: 10%;
+}
+.landingTagline > p {
+  display: inline;
+  font-size: 48px;
+}
