--- a/views/landing.jade
+++ b/views/landing.jade
@@ -12,3 +12,8 @@ block content
 		button#joinBtn.flat-button.flat-button-1(type="button", onclick="") Join a Party
 	a(href="/makeParty")
 		button#startBtn.flat-button.flat-button-1(type="button", onclick="") Start a Party
+
+	//- div.landingTagline
+	//-	br
+	//-	p.italic We
+	//-	p  control the party.
