--- a/views/hub.jade
+++ b/views/hub.jade
@@ -27,17 +27,26 @@ block pageScripts
       p.downVotes {{downvoteCount}}
       img.thumbDown(src="/resources/images/thumbDown.svg")
       img.deleteButton(src="/resources/images/deleteButton.svg")
+  script.playerTemplate(type="text/x-handlebars")
+    img.playerAlbum(src="{{albumArtworkUrl}}")
+    p {{title}} - {{artist}}
+    table#musicPlayingTimeGrid
+      tr
+        td#startTime
+        td#track
+          div#progressed
+          div#remaining
+        td#endTime
 
 
 block content
-  h1= title
-  p Party On, Party People.
-
-  img.adminBtn#playButton(src="/resources/images/playButton.svg")
-  img.adminBtn#skipButton(src="/resources/images/skipButton.svg")
+  .admin
+    img.adminBtn#playButton(src="/resources/images/playButton.svg")
+    img.adminBtn#pauseButton(style="display: none;" src="/resources/images/pauseButton.svg")
+    img.adminBtn#skipButton(src="/resources/images/skipButton.svg")
 
   div#mainPlayer
-    img.playerAlbum(src="/resources/images/chance.jpg")
+    img.playerAlbum(src="/resources/images/missing.png")
     table#musicPlayingTimeGrid
       tr
         td#startTime
