--- a/views/makeParty.jade
+++ b/views/makeParty.jade
@@ -39,5 +39,5 @@ block content
 				div.infoBlock
 					label.infoLabel By Email:
 					input.infoForm#partyName(type="text")
-
-		button#submitBtn1.flat-button.flat-button-1(type="button", onclick="") Submit
+		a(href="/hub")
+			button#submitBtn1.flat-button.flat-button-1(type="button", onclick="") Submit
