--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -120,6 +120,7 @@ a
     min-width: 125px;
     background-color: #ef634c;
     box-shadow: 0px 3px 0px 0px #ce503a;
+    padding: 5px;
 
 .flat-button-1:hover
     background-color: #eb5137;
@@ -147,7 +148,7 @@ a
 
 .bottom
     bottom 0px
-    position absolute
+    position fixed
     width 100%
     padding-bottom 15px
     padding-top 15px
