--- a/public/stylesheets/song.styl
+++ b/public/stylesheets/song.styl
@@ -151,3 +151,22 @@ player-height = 150px
     width: 70%;
     white-space: nowrap;
     overflow: hidden;
+
+.addSong
+  background dark-back-color
+  background-image url("/resources/images/addButton.svg")
+  background-repeat: no-repeat;
+  background-position: 50% 50%;
+  background-size:40px 40px;
+  position relative
+  height: 50px;
+  width: 50px;
+  border: none;
+  zindex: 100;
+
+
+.addButton
+    width 30px
+    margin-top 10px
+    left 0
+    zindex: -10;
