--- a/views/hub.jade
+++ b/views/hub.jade
@@ -15,7 +15,7 @@ block pageScripts
   script.suggestionTemplate(type="text/x-handlebars")
     div.songContainer
       div.queueNumber
-        button.addSong(data-track-id="{{trackId}}") +
+        button.addSong(data-track-id="{{trackId}}")
       img.queueAlbum(src="{{albumArtworkUrl}}")
       div.songTitleDiv
         p.songTitle {{title}} - {{artist}}
