--- a/views/joinParty.jade
+++ b/views/joinParty.jade
@@ -14,5 +14,5 @@ block content
     div
       h2
       form
-        input(type='text')
-        input(type='submit')
+        input#partyID(type='text')
+        button#submitBtn1.flat-button.flat-button-1(type="button", onclick="") Submit
