--- a/views/makeParty.jade
+++ b/views/makeParty.jade
@@ -9,7 +9,7 @@ block pageScripts
 
 block content
 	div#contentCollapser
-		div
+		div.unitGuy
 			h2 
 				span Party Info
 			div.collContent
@@ -32,7 +32,7 @@ block content
 					label.infoLabel End Time:
 					input.infoForm#endTime(type="time")
 
-		div
+		div.unitGuy
 			h2 
 				span Invite People
 			div.collContent
