--- a/public/stylesheets/song.css
+++ b/public/stylesheets/song.css
@@ -139,3 +139,23 @@
   white-space: nowrap;
   overflow: hidden;
 }
+.addSong {
+  background: #383b42;
+  background-image: url("/resources/images/addButton.svg");
+  background-repeat: no-repeat;
+  background-position: 50% 50%;
+  -webkit-background-size: 40px 40px;
+  -moz-background-size: 40px 40px;
+  background-size: 40px 40px;
+  position: relative;
+  height: 50px;
+  width: 50px;
+  border: none;
+  zindex: 100;
+}
+.addButton {
+  width: 30px;
+  margin-top: 10px;
+  left: 0;
+  zindex: -10;
+}
