--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -128,6 +128,27 @@ a
 .flat-button-1:active
     box-shadow: 0px 1px 0px 0px #ce503a;
 
+#partyID
+    height 60px
+    width 30%
+
+.flat-button-2
+    height: 70px;
+    width: 35%;
+    margin 10px
+    color #393c43
+    min-width: 300px;
+    background-color: #5a5e6a;
+    box-shadow: 0px 3px 0px 0px #393c43;
+    padding: 5px;
+
+.flat-button-2:hover
+    background-color: #4b4e58;
+    color: main-white
+
+.flat-button-2:active
+    box-shadow: 0px 1px 0px 0px #393c43;
+
 .adminBtn
     height 70px
     margin 10px
