add search song in party page

--- a/views/party.jade
+++ b/views/party.jade
@@ -8,8 +8,11 @@ block styleSheets
 block pageScripts
   script(src="/js/socket.io.js")
   script(src="/js/handlebars.js")
+  script(src="/js/typeahead.bundle.js")
+  script(src="/js/soundcloud.js")
   script(src='/js/sliders.js')
   script(src="/js/party.js")
+  script(src="/js/hub.js")
   script(src="/js/musicPlayingTimeGrid.js")
   script.suggestionTemplate(type="text/x-handlebars")
     div.songContainer
@@ -28,9 +31,12 @@ block pageScripts
 
 block content
   div.sliderPane#musicPane
+    div#requestContainer
+      input.newSong(type = "text")
   div.sliderPane#picturePane
   div.sliderToggle#pictureSlider
   div.sliderToggle#musicSlider
+
 
   div#mainPlayer
     img.playerAlbum(src="/resources/images/chance.jpg")
