responsive code stuff

--- a/public/stylesheets/song.styl
+++ b/public/stylesheets/song.styl
@@ -27,7 +27,7 @@ player-height = 150px
     background-color mid-back-color
     width 90%
     max-width 1000px
-    min-width 100px
+    min-width 400px
     height player-height
     margin 50px
     margin-left:auto;
@@ -54,7 +54,7 @@ player-height = 150px
 .songContainer
     background-color mid-back-color
     width 80%
-    min-width 345px;
+    min-width 400px
     height song-height
     margin 30px
     margin-left:auto;
@@ -148,7 +148,7 @@ player-height = 150px
 
 .songTitleDiv
     text-overflow: ellipsis;
-    width: 70%;
+    width: 65%;
     white-space: nowrap;
     overflow: hidden;
 
@@ -163,6 +163,7 @@ player-height = 150px
   width: 50px;
   border: none;
   zindex: 100;
+  display block
 
 
 .addButton
