--- a/public/stylesheets/song.css
+++ b/public/stylesheets/song.css
@@ -14,7 +14,7 @@
   background-color: #5a5e6a;
   width: 90%;
   max-width: 1000px;
-  min-width: 100px;
+  min-width: 400px;
   height: 150px;
   margin: 50px;
   margin-left: auto;
@@ -40,7 +40,7 @@
 .songContainer {
   background-color: #5a5e6a;
   width: 80%;
-  min-width: 345px;
+  min-width: 400px;
   height: 50px;
   margin: 30px;
   margin-left: auto;
@@ -135,7 +135,7 @@
 .songTitleDiv {
   -o-text-overflow: ellipsis;
   text-overflow: ellipsis;
-  width: 70%;
+  width: 65%;
   white-space: nowrap;
   overflow: hidden;
 }
@@ -152,6 +152,7 @@
   width: 50px;
   border: none;
   zindex: 100;
+  display: block;
 }
 .addButton {
   width: 30px;
