--- a/views/layout.jade
+++ b/views/layout.jade
@@ -5,6 +5,7 @@ html
     link(rel='stylesheet', href='/stylesheets/main.css')
     link(rel='stylesheet', href='/stylesheets/style.css')
     link(rel='stylesheet', href='/stylesheets/sliders.css')
+    link(rel='icon', href='/resources/images/icon.svg')
     block styleSheets
 
     script(src='/js/jquery_2.1.0.js')
