--- a/public/stylesheets/sliders.css
+++ b/public/stylesheets/sliders.css
@@ -1,73 +1,66 @@
-
-
+/*
+ * Import nib
+ */
 .sliderPane {
-   top: 30%;
-   width: 100%;
-   height: 70%;
-   background-color: #757985;
-   position: absolute;
-   z-index: 5;
-   display: none;
+  top: 30%;
+  width: 100%;
+  height: 70%;
+  background-color: #757985;
+  position: absolute;
+  z-index: 5;
+  display: none;
 }
-
 .sliderToggle {
-    height: 4em;
-    width: 3em;
-    padding: 0.1em;
-    background-color: red;
-    position: absolute;
-    top: 30%;
-    z-index: 10;
-    cursor: pointer;
+  height: 4em;
+  width: 3em;
+  padding: 0.1em;
+  background-color: #f00;
+  position: absolute;
+  top: 30%;
+  z-index: 10;
+  cursor: pointer;
 }
-
-
 #musicSlider {
-    left: 0;
-    background: url('/resources/images/note.svg') no-repeat center;
-    background-size: 50%;
-    border-radius: 0 0 0.5em 0;
-    /*box-shadow: 0.2em 0.2em 0.75em;*/
-    background-color: #de6143;
-    box-shadow: 0px 3px 0px 0px #bd4021;
+  left: 0;
+  background: url("/resources/images/note.svg") no-repeat center;
+  -webkit-background-size: 50%;
+  -moz-background-size: 50%;
+  background-size: 50%;
+  -webkit-border-radius: 0 0 0.5em 0;
+  border-radius: 0 0 0.5em 0;
+/*box-shadow: 0.2em 0.2em 0.75em;*/
+  background-color: #de6143;
+  -webkit-box-shadow: 0px 3px 0px 0px #bd4021;
+  box-shadow: 0px 3px 0px 0px #bd4021;
 }
-
 #musicSlider:hover {
   background-color: #dc5636;
 }
-
 #musicSlider:active {
   background-color: #d94826;
 }
-
-
 #pictureSlider {
-    right: 0;
-    background: url('/resources/images/camera.svg') no-repeat center;
-    background-size: 50%;
-    border-radius: 0 0 0 0.5em;
-    /*box-shadow: -0.2em 0.2em 0.75em;*/
-    background-color: #de6143;
-    box-shadow: 0px 3px 0px 0px #bd4021;
+  right: 0;
+  background: url("/resources/images/camera.svg") no-repeat center;
+  -webkit-background-size: 50%;
+  -moz-background-size: 50%;
+  background-size: 50%;
+  -webkit-border-radius: 0 0 0 0.5em;
+  border-radius: 0 0 0 0.5em;
+/*box-shadow: -0.2em 0.2em 0.75em;*/
+  background-color: #de6143;
+  -webkit-box-shadow: 0px 3px 0px 0px #bd4021;
+  box-shadow: 0px 3px 0px 0px #bd4021;
 }
-
 #pictureSlider:hover {
   background-color: #dc5636;
 }
-
 #pictureSlider:active {
   background-color: #d94826;
 }
-
-/*.flat-button-1 {
-    background-color: #ef634c;
-    box-shadow: 0px 3px 0px 0px #ce503a;
-}*/
-
-/*    .flat-button-1:hover {
-        background-color: #eb5137;
-    }
-
-    .flat-button-1:active {
-        box-shadow: 0px 1px 0px 0px #ce503a;
-    }*/
+#musicPaneContainer {
+  padding: 20px;
+}
+#musicPaneContainer > p {
+  margin: 10px;
+}
