--- a/views/party.jade
+++ b/views/party.jade
@@ -32,7 +32,8 @@ block pageScripts
 
 block content
   div.sliderPane#musicPane
-    div#requestContainer
+    div#musicPaneContainer
+      p Search for music to add to the queue:
       input.newSong(type = "text")
   div.sliderPane#picturePane
   div.sliderToggle#pictureSlider
