hub works {*fingers crossed*}

--- a/views/hub.jade
+++ b/views/hub.jade
@@ -29,10 +29,16 @@ block pageScripts
       p.downVotes {{downvoteCount}}
       img.thumbDown(src="/resources/images/thumbDown.svg")
       img.deleteButton(src="/resources/images/deleteButton.svg")
-  script.playerTemplate(type="text/x-handlebars")
-    img.playerAlbum(src="{{albumArtworkUrl}}")
+
+block content
+  .admin
+    img.adminBtn.pauseButton
+    img.adminBtn.skipButton(src="/resources/images/skipButton.svg")
+
+  div#mainPlayer
+    img.playerAlbum(src="/resources/images/missing.png")
     div.rightPlayer
-      p {{title}} - {{artist}}
+      p.songInfo no songs in queue
       table#musicPlayingTimeGrid
         tr
           td#startTime
@@ -40,23 +46,6 @@ block pageScripts
             div#progressed
             div#remaining
           td#endTime
-
-
-block content
-  .admin
-    img.adminBtn.playButton
-    img.adminBtn.skipButton(src="/resources/images/skipButton.svg")
-
-  div#mainPlayer
-    img.playerAlbum(src="/resources/images/missing.png")
-    p.songInfo no songs in queue
-    table#musicPlayingTimeGrid
-      tr
-        td#startTime
-        td#track
-          div#progressed
-          div#remaining
-        td#endTime
 
   ol#queueContainer
 
