--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -154,6 +154,12 @@ a
     margin 10px
     margin-top 30px
 
+img.pauseButton
+  content url("/resources/images/pauseButton.svg")
+
+img.playButton
+  content url("/resources/images/playButton.svg")
+
 .landingBrand
     font-size 78px
     color main-white
