--- a/public/stylesheets/makeParty.styl
+++ b/public/stylesheets/makeParty.styl
@@ -105,6 +105,8 @@ img.isOpen {
     margin-left auto
     margin-right auto
     position relative
+    border-style:solid;
+    border-bottom:2px solid mid-back-color;
 
 .unitGuy
     margin 20px
