--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -124,8 +124,13 @@ a
 
 .flat-button-1:hover
     background-color: #eb5137;
+
 .flat-button-1:active
     box-shadow: 0px 1px 0px 0px #ce503a;
+    position relative
+    top -5px
+    line-height 50px
+    padding-top 5px
 
 #partyID
     height 60px
@@ -147,6 +152,28 @@ a
 
 .flat-button-2:active
     box-shadow: 0px 1px 0px 0px #393c43;
+    line-height 50px
+    top 4px
+    margin-bottom 10px
+
+.flat-button-3
+    height: 70px;
+    width: 15%;
+    margin 10px
+    min-width: 125px;
+    background-color: #ef634c;
+    box-shadow: 0px 3px 0px 0px #ce503a;
+    padding: 5px;
+
+.flat-button-3:hover
+    background-color: #eb5137;
+
+.flat-button-3:active
+    box-shadow: 0px 1px 0px 0px #ce503a;
+    position relative
+    line-height 50px
+    top 2px
+    padding-top 5px
 
 .adminBtn
     height 70px
@@ -192,3 +219,5 @@ img.playButton
     display inline
     font-size 48px
 
+#foundParty
+    padding 20px
