--- a/views/joinParty.jade
+++ b/views/joinParty.jade
@@ -11,8 +11,8 @@ block content
   div#holder
     h1
     div#foundParty
-    div
-      h2
+    br
+    div.joinFound
       form
         input#partyID(type='text')
-        button#submitBtn1.flat-button.flat-button-1(type="button", onclick="") Submit
+        button#submitBtn1.flat-button.flat-button-3(type="button", onclick="") Submit
