--- a/public/stylesheets/makeParty.css
+++ b/public/stylesheets/makeParty.css
@@ -81,6 +81,8 @@ h2 {
   margin-left: auto;
   margin-right: auto;
   position: relative;
+  border-style: solid;
+  border-bottom: 2px solid #5a5e6a;
 }
 .unitGuy {
   margin: 20px;
