--- a/views/party.jade
+++ b/views/party.jade
@@ -14,6 +14,7 @@ block pageScripts
   script(src="/js/party.js")
   script(src="/js/hub.js")
   script(src="/js/musicPlayingTimeGrid.js")
+  script(src="/js/queueSorter.js")
   script.suggestionTemplate(type="text/x-handlebars")
     div.songContainer
       div.queueNumber
