--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -221,3 +221,18 @@ img.playButton
 
 #foundParty
     padding 20px
+
+#popup
+    background-color mid-back-color
+    height 60%
+    width 80%
+    margin 6%
+
+#popup > h1
+    color main-white
+
+#popup > label
+    float right
+
+#popup > input
+    float right
