--- a/views/layout.jade
+++ b/views/layout.jade
@@ -12,6 +12,7 @@ html
     script(src='/js/jquery_ui_1.10.4.min.js')
     script(src="/js/constants.js")
     script(src="/js/main.js")
+    script(src="/js/foundation.min.js")
     block pageScripts
   body
     div#popupCover
