--- a/views/party.jade
+++ b/views/party.jade
@@ -43,12 +43,14 @@ block content
 
   div#mainPlayer
     img.playerAlbum(src="/resources/images/chance.jpg")
-    table#musicPlayingTimeGrid
-      tr
-        td#startTime
-        td#track
-          div#progressed
-          div#remaining
-        td#endTime
+    div.rightPlayer
+      p.songInfo no songs in queue
+      table#musicPlayingTimeGrid
+        tr
+          td#startTime
+          td#track
+            div#progressed
+            div#remaining
+          td#endTime
 
   ol#queueContainer
