got rid of stuff

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -6,6 +6,7 @@ html
     link(rel='stylesheet', href='/stylesheets/style.css')
     link(rel='stylesheet', href='/stylesheets/sliders.css')
     link(rel='icon', href='/resources/images/icon.svg')
+    meta(name="viewport" content="initial-scale=1")
     block styleSheets
 
     script(src='/js/jquery_2.1.0.js')
