--- a/views/party.jade
+++ b/views/party.jade
@@ -42,7 +42,7 @@ block content
 
 
   div#mainPlayer
-    img.playerAlbum(src="/resources/images/chance.jpg")
+    img.playerAlbum(src="/resources/images/missing.png")
     div.rightPlayer
       p.songInfo no songs in queue
       table#musicPlayingTimeGrid
