--- a/CloudList/res/layout/join_cloud_list.xml
+++ b/CloudList/res/layout/join_cloud_list.xml
@@ -33,53 +33,37 @@
     android:background="#818590" >
 
     <TextView
-        android:id="@+id/textView2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignBaseline="@+id/textView1"
-        android:layout_alignBottom="@+id/textView1"
-        android:layout_toLeftOf="@+id/textView1"
-        android:text="Cloud"
-        android:textColor="#3B3D49"
-        android:textSize="50sp" />
-
-    <TextView
-        android:id="@+id/textView1"
+        android:id="@+id/textViewCloud"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
         android:layout_alignParentTop="true"
         android:layout_marginRight="55dp"
         android:layout_marginTop="25dp"
-        android:text="List"
+        android:text="Cloud"
         android:textColor="#FFFFFF"
+        android:textSize="50sp" />
+
+    <TextView
+        android:id="@+id/textViewJoin"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignBaseline="@+id/textViewCloud"
+        android:layout_alignBottom="@+id/textViewCloud"
+        android:layout_toLeftOf="@+id/textViewCloud"
+        android:text="Join"
+        android:textColor="#3B3D49"
         android:textSize="50sp" />
 
     <Button
         android:id="@+id/button1"
         android:layout_width="125dp"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/textView1"
+        android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="65dp"
+        android:layout_marginBottom="58dp"
         android:background="#DE6141"
-        android:text="Start a Cloud"
-        android:onClick="startCloud"
+        android:text="Submit"
         android:textColor="#FFFFFF" />
-
-    <Button
-        android:id="@+id/button2"
-        android:layout_width="125dp"
-        android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/button1"
-        android:layout_below="@+id/button1"
-        android:layout_marginTop="38dp"
-        android:background="#DE6141"
-        android:text="Join a Cloud"
-        android:onClick="joinCloud"
-        android:textColor="#FFFFFF" />
-
-    
-
 
 </RelativeLayout>
